[package]
name = "sbp-derive"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4lDO2/sbp-rs"
documentation = "https://docs.rs/sbp"
readme = "../README.md"
categories = ["parsing"]
keywords = ["parser", "parsing", "serializer", "serializing", "macros", "binary"]
description = "A derive-like macro for declaring binary parsable structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "4lDO2/sbp-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }

[dev-dependencies]
sbp = { version = "0.1", path = "../sbp" }
