[package]
name = "sbp"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4lDO2/sbp-rs"
documentation = "https://docs.rs/sbp"
readme = "../README.md"
categories = ["parsing"]
keywords = ["parser", "parsing", "serializer", "serializing", "macros", "binary"]
description = "A quick-and-dirty crate that supports compactly defining parsable structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "4lDO2/sbp-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[features]
default = ["bitflags", "derive"]
derive = ["sbp-derive"]

[dependencies]
sbp-derive = { path = "../sbp-derive", version = "0.1", optional = true }
bitflags = { version = "1.2", optional = true }
